// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.U checkGrammar=false 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U checkGrammar=true 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U checkHighlight=false 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U checkHighlight=true 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U checkSpaces=false 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U checkSpaces=true 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U className="my-classname" 1`] = `
<u
  className="uu5-bricks-u my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U content="This is Content from ContentMixin" 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</u>
`;

exports[`UU5.Bricks.U content=12345 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</u>
`;

exports[`UU5.Bricks.U controlled=false 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U controlled=true 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U default props 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U disabled=false 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U disabled=true 1`] = `
<u
  className="uu5-bricks-u uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</u>
`;

exports[`UU5.Bricks.U docKit examples UU5.Bricks.U should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <P
    content="This is normal text"
    id="uuID02"
    key="uuID02"
  />
  <P
    id="uuID03"
    key="uuID03"
  >
    This is 
    <U
      id="uuID04"
    >
      underlined
    </U>
     text
  </P>
</div>
`;

exports[`UU5.Bricks.U dynamic=false 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U dynamic=true 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U hidden=false 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U hidden=true 1`] = `
<u
  className="uu5-bricks-u uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U id="myId" 1`] = `
<u
  className="uu5-bricks-u"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U ignoreHTML=false 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U ignoreHTML=true 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U mainAttrs=undefined 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U name="myName" 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U noIndex=false 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U noIndex=true 1`] = `
<u
  className="uu5-bricks-u uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U selected=false 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U selected=true 1`] = `
<u
  className="uu5-bricks-u uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U style="padding:8px; borderRadius: 2px" 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.U style={"backgroundColor":"red","color":"blue"} 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.U textCorrector=false 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U textCorrector=true 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U tooltip="My Tooltip" 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
